--- a/ddui/package.json
+++ b/ddui/package.json
@@ -1,46 +1,33 @@
 {
-  "name": "ddui",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^3.8.3",
-    "node-sass": "^7.0.1",
-    "sass-loader": "^12.6.0",
-    "vue": "^3.2.13"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "chai": "^4.3.6",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+		"name": "ddui",
+		"version": "0.1.0",
+		"scripts": {
+			"start": "parcel index.html --no-cache",
+			"dev-test": "parcel watch test/* --no-cache & karma start",
+			"test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
+		},
+		"dependencies": {
+				"vue": "^2.5.17",
+				"vuepress": "0.13.1"
+		},
+		"devDependencies": {
+			"@vue/component-compiler-utils": "^2.0.0",
+			"chai": "^4.1.2",
+			"chai-spies": "^1.0.0",
+			"karma": "^2.0.4",
+			"karma-chai": "^0.1.0",
+			"karma-chai-spies": "^0.1.4",
+			"karma-chrome-launcher": "^2.2.0",
+			"karma-mocha": "^1.3.0",
+			"karma-sinon-chai": "^1.3.4",
+			"mocha": "^5.2.0",
+			"node-sass": "^4.9.0",
+			"parcel-bundler": "^1.9.3",
+			"sinon": "^6.0.1",
+			"sinon-chai": "^3.2.0",
+			"vue-template-compiler": "^2.5.16"
+		},
+		"alias": {
+		    "vue": "./node_modules/vue/dist/vue.common.js"
+		}
 }
