--- a/ddui/package.json
+++ b/ddui/package.json
@@ -1,33 +1,35 @@
 {
-	"name": "ddui",
-	"version": "0.1.0",
-	"scripts": {
-		"start": "parcel index.html --no-cache",
-		"dev-test": "parcel watch test/* --no-cache & karma start",
-		"test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
-	},
-	"dependencies": {
-		"vue": "^2.5.17",
-		"vuepress": "0.13.1"
-	},
-	"devDependencies": {
-		"@vue/component-compiler-utils": "^2.0.0",
-		"chai": "^4.1.2",
-		"chai-spies": "^1.0.0",
-		"karma": "^2.0.4",
-		"karma-chai": "^0.1.0",
-		"karma-chai-spies": "^0.1.4",
-		"karma-chrome-launcher": "^2.2.0",
-		"karma-mocha": "^1.3.0",
-		"karma-sinon-chai": "^1.3.4",
-		"mocha": "^5.2.0",
-		"node-sass": "^4.9.0",
-		"parcel-bundler": "^1.9.3",
-		"sinon": "^6.0.1",
-		"sinon-chai": "^3.2.0",
-		"vue-template-compiler": "^2.5.16"
-	},
-	"alias": {
-		"vue": "./node_modules/vue/dist/vue.common.js"
-	}
+  "name": "ddui",
+  "private": true,
+  "version": "0.1.0",
+  "scripts": {
+    "start": "parcel index.html --no-cache",
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
+  },
+  "dependencies": {
+    "vue": "^2.5.17",
+    "vue-hot-reload-api": "^2.3.0"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^2.0.0",
+    "chai": "^4.1.2",
+    "chai-spies": "^1.0.0",
+    "karma": "^2.0.5",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^1.3.4",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.14.1",
+    "parcel-bundler": "^1.9.3",
+    "sass": "^1.51.0",
+    "sinon": "^6.3.5",
+    "sinon-chai": "^3.7.0",
+    "vue-template-compiler": "^2.5.16"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
+  }
 }
