--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
   my_first_job:
     runs-on: ubuntu-latest,
     name: My first job,
-	setps:
+    steps:
     - name: Checkout
         uses: actions/checkout@master
     
