--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,10 @@ on:
       - main
 jobs:
   my_first_job:
-    runs-on: ubuntu-latest,
-    name: My first job,
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-        uses: actions/checkout@v2
-        uses: actions/setup-node@v2
+      uses: actions/checkout@v2
+      uses: actions/setup-node@v2
       with:
         node-version: '12'
     - run: npm install
