--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
     branches:    
       - main
 jobs:
-  my_first_job:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       uses: actions/checkout@v2
