--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,7 @@ jobs:
     - name: Install and Build
       run: |
         npm install
-        npm install parcel
-        npm run test        
+        npm run-script test        
   my-deploy:
     runs-on: ubuntu-latest
     needs: my-build
