--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Install
-      run: npm install
-    - name: Build
+    - name: Install and Build
       run: |
-        npm install parcel
+        npm install
         npm run-script test       
   my-deploy:
     runs-on: ubuntu-latest
