--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test       
+      run: |
+        npm ci
+        npm run build --if-present
+        npm test       
   my-deploy:
     runs-on: ubuntu-latest
     needs: my-build
