--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,14 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test       
-  my-deploy:
-    runs-on: ubuntu-latest
-    needs: my-build
-    steps:
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.2.0
-      with:
-        token: ${{ secrets.ACCESS_TOKEN }}
-        branch: gh-pages
-        folder: .
-        clean: true
+  # my-deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: my-build
+  #   steps:
+  #   - name: Deploy to GitHub Pages
+  #     uses: JamesIves/github-pages-deploy-action@4.2.0
+  #     with:
+  #       token: ${{ secrets.ACCESS_TOKEN }}
+  #       branch: gh-pages
+  #       folder: .
+  #       clean: true
