--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
   "dependencies": {
+    "icon.vue": "^0.1.5",
     "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.3.0"
   },
