初步添加row和col

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "homepage": "https://Tomvictory.github.io/ddui",
   "scripts": {
-    "start": "parcel index.html --no-cache",
+    "start": "parcel public/index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
